// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": undefined,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 10,
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <MockedFontAwesomeIcon
      color="#fff"
      icon={
        {
          "icon": [
            512,
            512,
            [
              128269,
              "search",
            ],
            "f002",
            "M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z",
          ],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
      size={25}
    />
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 20,
          "fontWeight": "500",
          "marginLeft": 10,
        }
      }
    >
      Test Title
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <MockedFontAwesomeIcon
      color="#fff"
      icon={
        {
          "icon": [
            512,
            512,
            [
              128269,
              "search",
            ],
            "f002",
            "M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z",
          ],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
      size={25}
    />
  </View>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderTopColor": "#ccc",
        "borderTopWidth": 1,
        "bottom": 0,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "left": 0,
        "padding": 5,
        "paddingHorizontal": 10,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "translateY": -100,
          },
        ],
      }
    }
  >
    <TextInput
      onChangeText={[Function]}
      placeholder="Search for movies..."
      placeholderTextColor="#ccc"
      style={
        {
          "borderColor": "#ccc",
          "borderRadius": 5,
          "borderWidth": 1,
          "color": "#000",
          "height": 40,
          "paddingHorizontal": 10,
          "width": "90%",
        }
      }
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "width": "10%",
        }
      }
    >
      <MockedFontAwesomeIcon
        icon={
          {
            "icon": [
              384,
              512,
              [
                128473,
                10005,
                10006,
                10060,
                215,
                "close",
                "multiply",
                "remove",
                "times",
              ],
              "f00d",
              "M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z",
            ],
            "iconName": "xmark",
            "prefix": "fas",
          }
        }
        size={25}
      />
    </View>
  </View>
</View>
`;

exports[`Header Component shows and hides input box on search icon press 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": undefined,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 10,
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <MockedFontAwesomeIcon
      color="#fff"
      icon={
        {
          "icon": [
            512,
            512,
            [
              128269,
              "search",
            ],
            "f002",
            "M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z",
          ],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
      size={25}
    />
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 20,
          "fontWeight": "500",
          "marginLeft": 10,
        }
      }
    >
      Test Title
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <MockedFontAwesomeIcon
      color="#fff"
      icon={
        {
          "icon": [
            512,
            512,
            [
              128269,
              "search",
            ],
            "f002",
            "M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z",
          ],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
      size={25}
    />
  </View>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderTopColor": "#ccc",
        "borderTopWidth": 1,
        "bottom": 0,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "left": 0,
        "padding": 5,
        "paddingHorizontal": 10,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "translateY": -100,
          },
        ],
      }
    }
  >
    <TextInput
      onChangeText={[MockFunction]}
      placeholder="Search for movies..."
      placeholderTextColor="#ccc"
      style={
        {
          "borderColor": "#ccc",
          "borderRadius": 5,
          "borderWidth": 1,
          "color": "#000",
          "height": 40,
          "paddingHorizontal": 10,
          "width": "90%",
        }
      }
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "width": "10%",
        }
      }
    >
      <MockedFontAwesomeIcon
        icon={
          {
            "icon": [
              384,
              512,
              [
                128473,
                10005,
                10006,
                10060,
                215,
                "close",
                "multiply",
                "remove",
                "times",
              ],
              "f00d",
              "M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z",
            ],
            "iconName": "xmark",
            "prefix": "fas",
          }
        }
        size={25}
      />
    </View>
  </View>
</View>
`;

exports[`Header Component shows and hides input box on search icon press 2`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": undefined,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 10,
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <MockedFontAwesomeIcon
      color="#fff"
      icon={
        {
          "icon": [
            512,
            512,
            [
              128269,
              "search",
            ],
            "f002",
            "M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z",
          ],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
      size={25}
    />
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 20,
          "fontWeight": "500",
          "marginLeft": 10,
        }
      }
    >
      Test Title
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <MockedFontAwesomeIcon
      color="#fff"
      icon={
        {
          "icon": [
            512,
            512,
            [
              128269,
              "search",
            ],
            "f002",
            "M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z",
          ],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
      size={25}
    />
  </View>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderTopColor": "#ccc",
        "borderTopWidth": 1,
        "bottom": 0,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "left": 0,
        "padding": 5,
        "paddingHorizontal": 10,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "translateY": -100,
          },
        ],
      }
    }
  >
    <TextInput
      onChangeText={[MockFunction]}
      placeholder="Search for movies..."
      placeholderTextColor="#ccc"
      style={
        {
          "borderColor": "#ccc",
          "borderRadius": 5,
          "borderWidth": 1,
          "color": "#000",
          "height": 40,
          "paddingHorizontal": 10,
          "width": "90%",
        }
      }
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "width": "10%",
        }
      }
    >
      <MockedFontAwesomeIcon
        icon={
          {
            "icon": [
              384,
              512,
              [
                128473,
                10005,
                10006,
                10060,
                215,
                "close",
                "multiply",
                "remove",
                "times",
              ],
              "f00d",
              "M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z",
            ],
            "iconName": "xmark",
            "prefix": "fas",
          }
        }
        size={25}
      />
    </View>
  </View>
</View>
`;

exports[`Header Component shows and hides input box on search icon press 3`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": undefined,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 10,
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <MockedFontAwesomeIcon
      color="#fff"
      icon={
        {
          "icon": [
            512,
            512,
            [
              128269,
              "search",
            ],
            "f002",
            "M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z",
          ],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
      size={25}
    />
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 20,
          "fontWeight": "500",
          "marginLeft": 10,
        }
      }
    >
      Test Title
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <MockedFontAwesomeIcon
      color="#fff"
      icon={
        {
          "icon": [
            512,
            512,
            [
              128269,
              "search",
            ],
            "f002",
            "M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z",
          ],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
      size={25}
    />
  </View>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderTopColor": "#ccc",
        "borderTopWidth": 1,
        "bottom": 0,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "left": 0,
        "padding": 5,
        "paddingHorizontal": 10,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "translateY": -100,
          },
        ],
      }
    }
  >
    <TextInput
      onChangeText={[MockFunction]}
      placeholder="Search for movies..."
      placeholderTextColor="#ccc"
      style={
        {
          "borderColor": "#ccc",
          "borderRadius": 5,
          "borderWidth": 1,
          "color": "#000",
          "height": 40,
          "paddingHorizontal": 10,
          "width": "90%",
        }
      }
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "width": "10%",
        }
      }
    >
      <MockedFontAwesomeIcon
        icon={
          {
            "icon": [
              384,
              512,
              [
                128473,
                10005,
                10006,
                10060,
                215,
                "close",
                "multiply",
                "remove",
                "times",
              ],
              "f00d",
              "M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z",
            ],
            "iconName": "xmark",
            "prefix": "fas",
          }
        }
        size={25}
      />
    </View>
  </View>
</View>
`;
